# Files_on_Schedule

./: .gitignore  CMakeLists.txt  README.md
data/icon/: icon.psd
data/res/: conf.json  state.json
data/res/coords/: 2021-09-27-2021-10-03.buttondata.json  2021-10-04-2021-10-10.buttondata.json  2021-10-11-2021-10-17.buttondata.json  2021-10-18-2021-10-24.buttondata.json  2021-10-25-2021-10-31.buttondata.json
data/res/exec/: change_image_exposure.py  ext.py  find_coords_inside_week_schedule.py  translate_coords_to_json-src.7z  translate_coords_to_json.out  trim.py
inc/: ConfData.hpp  HrefActions.hpp  JsonRead.hpp  LogData.hpp  Objects.hpp  Schedule.hpp  SimpleGUI.hpp  UpdateSchedule.hpp  Window.hpp
inc/SimpleGUI/: Button.hpp  ImageBox.hpp  Label.hpp
src/: ConfData.cpp  HrefActions.cpp  JsonRead.cpp  LogData.cpp  Objects.cpp  Schedule.cpp  UpdateSchedule.cpp  Window.cpp  main.cpp  resource.rc
src/SimpleGUI/: Button.cpp  CheckBox.cpp  GroupBox.cpp  ImageBox.cpp  Label.cpp  RadioButton.cpp  SguiObject.cpp  Switch.cpp  TabControl.cpp
